:construction: updates to accommodate fat jar builds